k8s/cache-inspector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cache-inspector
spec:
  containers:
  - image: busybox
    name: cache-inspector
    command: ["tail"]
    args: ["-f", "/dev/null"]
    volumeMounts:
    - mountPath: /cache
      name: extractor-pv
  volumes:
  - name: extractor-pv
    persistentVolumeClaim:
      claimName: extractor-pvc
