k8s/vpa-recommender-extractor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpa-recommender-extractor
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpa-recommender-extractor
  template:
    metadata:
      labels:
        app: vpa-recommender-extractor
    spec:
      containers:
      - name: recommender
        image: registry.k8s.io/autoscaling/vpa-recommender:1.0.0
        imagePullPolicy: Always
        args:
          - --recommender-name=extractor
          - --pod-recommendation-min-cpu-millicores=100
          - --pod-recommendation-min-memory-mb=200
        resources:
          limits:
            cpu: 200m
            memory: 1000Mi
          requests:
            cpu: 50m
            memory: 500Mi
        ports:
        - name: prometheus
          containerPort: 8942
