k8s/ingress-production.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sushi-api-production-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "sushi-api-production-ip"
    networking.gke.io/managed-certificates: "sushi-api-production-managed-certificate"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
      gzip on;
      gzip_types application/json;
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
